Removing build++ errors
SVN-Revision: 24406